--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -15,7 +15,7 @@
 
 \subsection{Grand canonical Monte Carlo}
 
-Xe/Kr applications in the industry
+
 
 \subsection{Widom insertion}
 
@@ -26,6 +26,8 @@ As we have seen above in the existing literature, the computational screening of
 In the present work, our goal is not directly to address the structure--property relationships, but rather to map out the details of the thermodynamic features of Xe/Kr adsorption and separation in nanoporous materials. We used the high-throughput screening methodology as a way to map out the space of thermodynamic properties, going beyond the usual quantities of selectivity and uptake, to focus more specifically on the role of adsorption enthalpy and entropy, the differences between Xe and Kr adsorption thermodynamics, and the differences between selectivity at low and high pressure.
 
 \subsection{Structure--selectivity relationships}
+
+\todo{Put analyses of selectivity relationship with other descriptors: uptake, void fraction, surface area, etc.}
 
 \subsection{Exchange equilibrium and selectivity}\label{section:exchange}
 
