--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -7,19 +7,17 @@
 \chapter{Adsorption molecular simulations}
 \vspace*{-1\baselineskip}
 
-\section{Beyond standard molecular simulations}
+\section{Voronoi sampling}
 
-\subsection{Grand canonical Monte Carlo}
+\section{Rapid Adsorption Enthalpy Surface Sampling (RAESS)}
 
-\todo{Ren2023}
+\subsection{Software description}
 
-\subsection{Widom's insertion}
+\subsection{Comparison to standard methodologies}
 
-\section{New algorithm development}
+\section{Grid Adsorption Energies Descriptors (GrAED)}
 
-\subsection{Rapid Adsorption Enthalpy Surface Sampling (RAESS)}
-
-\subsection{Grid Adsorption Energies Sampling (GrAES)}
+\todo{transition into ML models}
 
 \OnlyInSubfile{\printglobalbibliography}
 
