--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -4,21 +4,41 @@
 
 \begin{document}
 
-\chapter{Transport properties}
+\chapter{Xenon and krypton transport properties}
 \vspace*{-1\baselineskip}
-\section{Computational simulations}
+
+\section{Existing methodologies}
+
 Experiment?
+
+
 \subsection{Molecular dynamics}
 
 \subsection{Fast kinetic Monte Carlo}
 tutrast
-ctutrast
+ctutrast\cite{Mace_2019}
 ML descriptors
 next steps
 
 \section{ML modeling}
 
 Results
+
+\section{Molecular dynamics calculation results}
+
+\subsection{Why is it relevant?}
+
+\subsection{Correlations}
+
+\section{Fast diffusion calculation algorithm}
+
+\subsection{Implementation in C++}
+
+\subsection{Preliminary results}
+
+\subsection{Visualization tool}
+
+\subsection{ML model training}
 
 \OnlyInSubfile{\printglobalbibliography}
 
