--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -12,7 +12,14 @@ Final screening step, easy integration into the workflow of current sreenings
 
 \subsection{Snapshot}
 
-\section{Open Metal Sites}
+\section{Noble gas polarisability}
+
+Xe/Kr difference of polarisability
+Open Metal Sites/polar groups
+\todo{20220421\_pres}
+
+\todo{Not the best material, but interesting discussion on open metal site effect}
+Tao et al.\cite{Tao2020} looked at tuning (and improving) the selective adsorption of Xe over Kr by MOF open metal sites in the UTSA-74 framework structure.
 
 \subsection{Problem, literature}
 
