--- a/thesis.bib
+++ b/thesis.bib
@@ -8,6 +8,45 @@
 	title = {Two-Dimensional Energy Histograms as Features for Machine Learning to Predict Adsorption in Diverse Nanoporous Materials},
 	journal = {J. Chem. Theory Comput.}
 }
+@article{Lagorsse_2007,
+	doi = {10.1016/j.memsci.2007.05.032},
+	url = {https://doi.org/10.1016%2Fj.memsci.2007.05.032},
+	year = 2007,
+	month = {sep},
+	publisher = {Elsevier {BV}},
+	volume = {301},
+	number = {1-2},
+	pages = {29--38},
+	author = {S. Lagorsse and F.D. Magalh{\~{a}}es and A. Mendes},
+	title = {Xenon recycling in an anaesthetic closed-system using carbon molecular sieve membranes},
+	journal = {Journal of Membrane Science}
+}
+@article{Qiu_2020,
+	doi = {10.1021/acsenergylett.9b02625},
+	url = {https://doi.org/10.1021%2Facsenergylett.9b02625},
+	year = 2020,
+	month = {jan},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {5},
+	number = {2},
+	pages = {520--532},
+	author = {Tianjie Qiu and Zibin Liang and Wenhan Guo and Hassina Tabassum and Song Gao and Ruqiang Zou},
+	title = {Metal{\textendash}Organic Framework-Based Materials for Energy Conversion and Storage},
+	journal = {ACS Energy Letters}
+}
+@article{Pascanu_2019,
+	doi = {10.1021/jacs.9b00733},
+	url = {https://doi.org/10.1021%2Fjacs.9b00733},
+	year = 2019,
+	month = {apr},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {141},
+	number = {18},
+	pages = {7223--7234},
+	author = {Vlad Pascanu and Greco Gonz{\'{a}}lez Miera and A. Ken Inge and Bel{\'{e}}n Mart{\'{i}}n-Matute},
+	title = {Metal{\textendash}Organic Frameworks as Catalysts for Organic Synthesis: A Critical Perspective},
+	journal = {J. Am. Chem. Soc.}
+}
 @article{Widom1963,
   author = { Widom, B. },
   title = { Some Topics in the Theory of Fluids },
@@ -102,7 +141,7 @@
 	pages = {3777--3792},
 	author = {Peter G. Boyd and Tom K. Woo},
 	title = {A generalized method for constructing hypothetical nanoporous materials of any net topology from graph theory},
-	journal = {{CrystEngComm}}
+	journal = {CrystEngComm}
 }    
 @article{Wilmer_2012,
   author = { Wilmer, Christopher E. and Leaf, Michael and Lee, Chang Yeon and Farha, Omar K. and Hauser, Brad G. and Hupp, Joseph T. and Snurr, Randall Q. },
@@ -117,7 +156,7 @@
 }
 @article{dubbeldam2016,
   title={RASPA: molecular simulation software for adsorption and diffusion in flexible nanoporous materials},
-  author={Dubbeldam, David and Calero, Sof{\'\i}a and Ellis, Donald E and Snurr, Randall Q},
+  author={Dubbeldam, David and Calero, Sof{\'{i}}a and Ellis, Donald E and Snurr, Randall Q},
   journal={Mol. Simulat.},
   volume={42},
   number={2},
@@ -503,7 +542,7 @@
 	doi = {10.1021/acs.chemmater.0c03057},
 	url = {https://doi.org/10.1021/acs.chemmater.0c03057},
 	year = 2020,
-	month = {aug},
+	month = Aug,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {32},
 	number = {18},
@@ -516,7 +555,7 @@
 	doi = {10.1021/cm502594j},
 	url = {https://doi.org/10.1021/cm502594j},
 	year = 2014,
-	month = {oct},
+	month = Oct,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {26},
 	number = {21},
@@ -541,7 +580,7 @@
 	doi = {10.1016/j.ces.2017.05.004},
 	url = {https://doi.org/10.1016/j.ces.2017.05.004},
 	year = 2017,
-	month = {aug},
+	month = Aug,
 	publisher = {Elsevier {BV}},
 	volume = {168},
 	pages = {456--464},
@@ -563,7 +602,7 @@
 	doi = {10.1021/cg500158c},
 	url = {https://doi.org/10.1021%2Fcg500158c},
 	year = 2014,
-	month = {apr},
+	month = Apr,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {14},
 	number = {5},
@@ -576,7 +615,7 @@
 	doi = {10.1021/ie0510728},
 	url = {https://doi.org/10.1021/ie0510728},
 	year = 2006,
-	month = {jan},
+	month = Jan,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {45},
 	number = {16},
@@ -601,7 +640,7 @@
 	doi = {10.1021/jp906984z},
 	url = {https://doi.org/10.1021/jp906984z},
 	year = 2009,
-	month = {oct},
+	month = Oct,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {113},
 	number = {51},
@@ -614,7 +653,7 @@
 	doi = {10.1021/acs.jpcc.8b09420},
 	url = {https://doi.org/10.1021/acs.jpcc.8b09420},
 	year = 2018,
-	month = {dec},
+	month = Dec,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {123},
 	number = {1},
@@ -649,6 +688,15 @@
   title = {Machine Learning for Organic Cage Property Prediction},
   journal = {Chemistry of Materials}
 }
+@techreport{Breslin_1976,
+	doi = {10.2172/7326039},
+	url = {https://doi.org/10.2172%2F7326039},
+	year = 1976,
+	month = {nov},
+	publisher = {Office of Scientific and Technical Information ({OSTI})},
+	author = {A Breslin},
+	title = {Guidance for air sampling at nuclear facilities. [Radiation monitoring]}
+}
 @manual{kalil2011national,
   title={Materials Genome Initiative
 for Global Competitiveness},
@@ -666,7 +714,7 @@ for Global Competitiveness},
 	doi = {10.1063/1.4812323},
 	url = {https://doi.org/10.1063/1.4812323},
 	year = 2013,
-	month = {jul},
+	month = Jul,
 	publisher = {{AIP} Publishing},
 	volume = {1},
 	number = {1},
@@ -679,7 +727,7 @@ for Global Competitiveness},
 	doi = {10.1021/ci200386x},
 	url = {https://doi.org/10.1021/ci200386x},
 	year = 2011,
-	month = {dec},
+	month = Dec,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {52},
 	number = {2},
@@ -692,7 +740,7 @@ for Global Competitiveness},
 	doi = {10.1038/s41467-020-17755-8},
 	url = {https://doi.org/10.1038/s41467-020-17755-8},
 	year = 2020,
-	month = {aug},
+	month = Aug,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {11},
 	number = {1},
@@ -705,7 +753,7 @@ for Global Competitiveness},
 	doi = {10.1038/ncomms15396},
 	url = {https://doi.org/10.1038/ncomms15396},
 	year = 2017,
-	month = {may},
+	month = May,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {8},
 	number = {1},
@@ -718,7 +766,7 @@ for Global Competitiveness},
 	doi = {10.1021/jp4006422},
 	url = {https://doi.org/10.1021/jp4006422},
 	year = 2013,
-	month = {apr},
+	month = Apr,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {117},
 	number = {15},
@@ -731,7 +779,7 @@ for Global Competitiveness},
 	doi = {10.1021/jp404287t},
 	url = {https://doi.org/10.1021/jp404287t},
 	year = 2013,
-	month = {jul},
+	month = Jul,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {117},
 	number = {27},
@@ -756,7 +804,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.jpcc.8b10644},
 	url = {https://doi.org/10.1021/acs.jpcc.8b10644},
 	year = 2019,
-	month = {jan},
+	month = Jan,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {123},
 	number = {7},
@@ -769,7 +817,7 @@ for Global Competitiveness},
 	doi = {10.1351/pac199466081739},
 	url = {https://doi.org/10.1351%2Fpac199466081739},
 	year = 1994,
-	month = {jan},
+	month = Jan,
 	publisher = {Walter de Gruyter {GmbH}},
 	volume = {66},
 	number = {8},
@@ -782,7 +830,7 @@ for Global Competitiveness},
 	doi = {10.1351/pac198557040603},
 	url = {https://doi.org/10.1351%2Fpac198557040603},
 	year = 1985,
-	month = {jan},
+	month = Jan,
 	publisher = {Walter de Gruyter {GmbH}},
 	volume = {57},
 	number = {4},
@@ -795,7 +843,7 @@ for Global Competitiveness},
 	doi = {10.1021/jp502359q},
 	url = {https://doi.org/10.1021/jp502359q},
 	year = 2014,
-	month = {mar},
+	month = Mar,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {118},
 	number = {13},
@@ -808,7 +856,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.jpcc.6b08729},
 	url = {https://doi.org/10.1021/acs.jpcc.6b08729},
 	year = 2016,
-	month = {nov},
+	month = Nov,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {120},
 	number = {48},
@@ -821,7 +869,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.chemmater.6b04933},
 	url = {https://doi.org/10.1021/acs.chemmater.6b04933},
 	year = 2017,
-	month = {mar},
+	month = Mar,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {29},
 	number = {7},
@@ -834,7 +882,7 @@ for Global Competitiveness},
 	doi = {10.1080/08927022.2019.1597271},
 	url = {https://doi.org/10.1080/08927022.2019.1597271},
 	year = 2019,
-	month = {apr},
+	month = Apr,
 	publisher = {Informa {UK} Limited},
 	volume = {45},
 	number = {14-15},
@@ -847,7 +895,7 @@ for Global Competitiveness},
 	doi = {10.1021/acsami.1c02471},
 	url = {https://doi.org/10.1021%2Facsami.1c02471},
 	year = 2021,
-	month = {may},
+	month = May,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {13},
 	number = {20},
@@ -860,7 +908,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.chemmater.0c00744},
 	url = {https://doi.org/10.1021/acs.chemmater.0c00744},
 	year = 2020,
-	month = {jul},
+	month = Jul,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {32},
 	number = {19},
@@ -873,7 +921,7 @@ for Global Competitiveness},
 	doi = {10.2134/agronj1974.00021962006600050029x},
 	url = {https://doi.org/10.2134%2Fagronj1974.00021962006600050029x},
 	year = 1974,
-	month = {sep},
+	month = Sep,
 	publisher = {Wiley},
 	volume = {66},
 	number = {5},
@@ -887,7 +935,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.enconman.2019.02.059},
 	url = {https://doi.org/10.1016%2Fj.enconman.2019.02.059},
 	year = 2019,
-	month = {apr},
+	month = Apr,
 	publisher = {Elsevier {BV}},
 	volume = {186},
 	pages = {450--461},
@@ -923,7 +971,7 @@ for Global Competitiveness},
 	doi = {10.2514/6.2002-3832},
 	url = {https://doi.org/10.2514%2F6.2002-3832},
 	year = 2002,
-	month = {jul},
+	month = Jul,
 	publisher = {American Institute of Aeronautics and Astronautics},
 	author = {Michael Patterson and John Foster and Thomas Haag and Vincent Rawlin and George Soulas and Robert Roman},
 	title = {{NEXT}: {NASA}{\textquotesingle}s Evolutionary Xenon Thruster},
@@ -933,7 +981,7 @@ for Global Competitiveness},
 	doi = {10.2514/6.2005-4260},
 	url = {https://doi.org/10.2514%2F6.2005-4260},
 	year = 2005,
-	month = {jul},
+	month = Jul,
 	publisher = {American Institute of Aeronautics and Astronautics},
 	author = {Ian Coxhill and David Gibbon},
 	title = {A Xenon Resistojet Propulsion System for Microsatellites},
@@ -954,7 +1002,7 @@ for Global Competitiveness},
 	doi = {10.1038/ncomms11831},
 	url = {https://doi.org/10.1038/ncomms11831},
 	year = 2016,
-	month = {jun},
+	month = Jun,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {7},
 	number = {1},
@@ -967,7 +1015,7 @@ for Global Competitiveness},
 	doi = {10.1021/jacs.7b01688},
 	url = {https://doi.org/10.1021/jacs.7b01688},
 	year = 2017,
-	month = {apr},
+	month = Apr,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {139},
 	number = {15},
@@ -1005,7 +1053,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.langmuir.6b02803},
 	url = {https://doi.org/10.1021/acs.langmuir.6b02803},
 	year = 2016,
-	month = {sep},
+	month = Sep,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {32},
 	number = {40},
@@ -1018,7 +1066,7 @@ for Global Competitiveness},
 	doi = {10.1021/acssuschemeng.6b01692},
 	url = {https://doi.org/10.1021/acssuschemeng.6b01692},
 	year = 2016,
-	month = {sep},
+	month = Sep,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {4},
 	number = {10},
@@ -1043,7 +1091,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.cclet.2019.04.025},
 	url = {https://doi.org/10.1016/j.cclet.2019.04.025},
 	year = 2020,
-	month = {jan},
+	month = Jan,
 	publisher = {Elsevier {BV}},
 	volume = {31},
 	number = {1},
@@ -1056,7 +1104,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.ccr.2020.213470},
 	url = {https://doi.org/10.1016/j.ccr.2020.213470},
 	year = 2020,
-	month = {nov},
+	month = Nov,
 	publisher = {Elsevier {BV}},
 	volume = {422},
 	pages = {213470},
@@ -1068,7 +1116,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.jpcc.1c06924},
 	url = {https://doi.org/10.1021/acs.jpcc.1c06924},
 	year = 2021,
-	month = {oct},
+	month = Oct,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {125},
 	number = {44},
@@ -1081,7 +1129,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.seppur.2021.118349},
 	url = {https://doi.org/10.1016%2Fj.seppur.2021.118349},
 	year = 2021,
-	month = {may},
+	month = May,
 	publisher = {Elsevier {BV}},
 	volume = {262},
 	pages = {118349},
@@ -1093,7 +1141,7 @@ for Global Competitiveness},
 	doi = {10.1021/la301915s},
 	url = {https://doi.org/10.1021/la301915s},
 	year = 2012,
-	month = {jul},
+	month = Jul,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {28},
 	number = {40},
@@ -1106,7 +1154,7 @@ for Global Competitiveness},
 	doi = {10.1021/ja1023699},
 	url = {https://doi.org/10.1021%2Fja1023699},
 	year = 2010,
-	month = {may},
+	month = May,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {132},
 	number = {21},
@@ -1119,7 +1167,7 @@ for Global Competitiveness},
 	doi = {10.1021/ja400267g},
 	url = {https://doi.org/10.1021/ja400267g},
 	year = 2013,
-	month = {may},
+	month = May,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {135},
 	number = {20},
@@ -1145,7 +1193,7 @@ for Global Competitiveness},
 	doi = {10.1021/acsanm.1c00727},
 	url = {https://doi.org/10.1021/acsanm.1c00727},
 	year = 2021,
-	month = {may},
+	month = May,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {4},
 	number = {5},
@@ -1170,7 +1218,7 @@ for Global Competitiveness},
 	doi = {10.1021/la981289p},
 	url = {https://doi.org/10.1021/la981289p},
 	year = 1999,
-	month = {mar},
+	month = Mar,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {15},
 	number = {9},
@@ -1183,7 +1231,7 @@ for Global Competitiveness},
 	doi = {10.1021/acssuschemeng.8b05339},
 	url = {https://doi.org/10.1021/acssuschemeng.8b05339},
 	year = 2019,
-	month = {jan},
+	month = Jan,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {7},
 	number = {3},
@@ -1208,7 +1256,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.memsci.2018.01.020},
 	url = {https://doi.org/10.1016/j.memsci.2018.01.020},
 	year = 2018,
-	month = {apr},
+	month = Apr,
 	publisher = {Elsevier {BV}},
 	volume = {551},
 	pages = {47--54},
@@ -1220,7 +1268,7 @@ for Global Competitiveness},
 	doi = {10.1021/acssuschemeng.8b05832},
 	url = {https://doi.org/10.1021/acssuschemeng.8b05832},
 	year = 2018,
-	month = {dec},
+	month = Dec,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {7},
 	number = {2},
@@ -1245,7 +1293,7 @@ for Global Competitiveness},
 	doi = {10.1021/acssuschemeng.8b04858},
 	url = {https://doi.org/10.1021/acssuschemeng.8b04858},
 	year = 2018,
-	month = {nov},
+	month = Nov,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {7},
 	number = {1},
@@ -1258,7 +1306,7 @@ for Global Competitiveness},
 	doi = {10.1021/jp075290l},
 	url = {https://doi.org/10.1021/jp075290l},
 	year = 2007,
-	month = {aug},
+	month = Aug,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {111},
 	number = {38},
@@ -1271,7 +1319,7 @@ for Global Competitiveness},
 	doi = {10.1021/la901438x},
 	url = {https://doi.org/10.1021/la901438x},
 	year = 2009,
-	month = {jul},
+	month = Jul,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {25},
 	number = {19},
@@ -1284,7 +1332,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.jpcc.0c05942},
 	url = {https://doi.org/10.1021/acs.jpcc.0c05942},
 	year = 2020,
-	month = {aug},
+	month = Aug,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {124},
 	number = {37},
@@ -1297,7 +1345,7 @@ for Global Competitiveness},
 	doi = {10.1007/s10450-021-00314-y},
 	url = {https://doi.org/10.1007/s10450-021-00314-y},
 	year = 2021,
-	month = {apr},
+	month = Apr,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {27},
 	number = {5},
@@ -1398,7 +1446,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.jpcc.1c03975},
 	url = {https://doi.org/10.1021/acs.jpcc.1c03975},
 	year = 2021,
-	month = {jul},
+	month = Jul,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {125},
 	number = {28},
@@ -1461,7 +1509,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.ccr.2021.213777},
 	url = {https://doi.org/10.1016/j.ccr.2021.213777},
 	year = 2021,
-	month = {jun},
+	month = Jun,
 	publisher = {Elsevier {BV}},
 	volume = {436},
 	pages = {213777},
@@ -1473,7 +1521,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.jpcc.6b07115},
 	url = {https://doi.org/10.1021/acs.jpcc.6b07115},
 	year = 2016,
-	month = {aug},
+	month = Aug,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {120},
 	number = {33},
@@ -1486,7 +1534,7 @@ for Global Competitiveness},
 	doi = {10.1021/acscatal.8b05178},
 	url = {https://doi.org/10.1021/acscatal.8b05178},
 	year = 2019,
-	month = {mar},
+	month = Mar,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {9},
 	number = {4},
@@ -1499,7 +1547,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.matt.2021.02.015},
 	url = {https://doi.org/10.1016/j.matt.2021.02.015},
 	year = 2021,
-	month = {may},
+	month = May,
 	publisher = {Elsevier {BV}},
 	volume = {4},
 	number = {5},
@@ -1672,7 +1720,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.coche.2021.100760},
 	url = {https://doi.org/10.1016/j.coche.2021.100760},
 	year = 2022,
-	month = {mar},
+	month = Mar,
 	publisher = {Elsevier {BV}},
 	volume = {35},
 	pages = {100760},
@@ -1684,7 +1732,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.matt.2019.03.002},
 	url = {https://doi.org/10.1016/j.matt.2019.03.002},
 	year = 2019,
-	month = {jul},
+	month = Jul,
 	publisher = {Elsevier {BV}},
 	volume = {1},
 	number = {1},
@@ -1857,7 +1905,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.cgd.0c01283},
 	url = {https://doi.org/10.1021%2Facs.cgd.0c01283},
 	year = 2020,
-	month = {nov},
+	month = Nov,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {20},
 	number = {12},
@@ -1882,7 +1930,7 @@ for Global Competitiveness},
 	doi = {10.1007/bf02479030},
 	url = {https://doi.org/10.1007%2Fbf02479030},
 	year = 1973,
-	month = {may},
+	month = May,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {6},
 	number = {3},
@@ -1895,7 +1943,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.coal.2004.03.002},
 	url = {https://doi.org/10.1016%2Fj.coal.2004.03.002},
 	year = 2004,
-	month = {aug},
+	month = Aug,
 	publisher = {Elsevier {BV}},
 	volume = {59},
 	number = {3-4},
@@ -1908,7 +1956,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.chemmater.0c03575},
 	url = {https://doi.org/10.1021%2Facs.chemmater.0c03575},
 	year = 2020,
-	month = {nov},
+	month = Nov,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {32},
 	number = {23},
@@ -1934,7 +1982,7 @@ for Global Competitiveness},
 	doi = {10.1021/ja3055639},
 	url = {https://doi.org/10.1021%2Fja3055639},
 	year = 2012,
-	month = {aug},
+	month = Aug,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {134},
 	number = {36},
@@ -1942,4 +1990,436 @@ for Global Competitiveness},
 	author = {Omar K. Farha and Ibrahim Eryazici and Nak Cheon Jeong and Brad G. Hauser and Christopher E. Wilmer and Amy A. Sarjeant and Randall Q. Snurr and SonBinh T. Nguyen and A. Özgür Yazayd{\i}n and Joseph T. Hupp},
 	title = {Metal{\textendash}Organic Framework Materials with Ultrahigh Surface Areas: Is the Sky the Limit?},
 	journal = {J. Am. Chem. Soc.}
+}
+@article{Detsi_2011,
+	doi = {10.1016/j.actamat.2011.08.025},
+	url = {https://doi.org/10.1016%2Fj.actamat.2011.08.025},
+	year = 2011,
+	month = Dec,
+	publisher = {Elsevier {BV}},
+	volume = {59},
+	number = {20},
+	pages = {7488--7497},
+	author = {E. Detsi and E. De Jong and A. Zinchenko and Z. Vukovi{\'{c}} and I. Vukovi{\'{c}} and S. Punzhin and K. Loos and G. ten Brinke and H.A. De Raedt and P.R. Onck and J.T.M. De Hosson},
+	title = {On the specific surface area of nanoporous materials},
+	journal = {Acta Materialia}
+}
+@article{Tian_2017,
+	doi = {10.1002/aic.15880},
+	url = {https://doi.org/10.1002%2Faic.15880},
+	year = 2017,
+	month = {aug},
+	publisher = {Wiley},
+	volume = {64},
+	number = {1},
+	pages = {286--293},
+	author = {Yun Tian and Jianzhong Wu},
+	title = {A comprehensive analysis of the {BET} area for nanoporous materials},
+	journal = {AIChE Journal}
+}
+@article{Osterrieth_2022,
+	doi = {10.1002/adma.202201502},
+	url = {https://doi.org/10.1002%2Fadma.202201502},
+	year = 2022,
+	month = {may},
+	publisher = {Wiley},
+	volume = {34},
+	number = {27},
+	pages = {2201502},
+	author = {Johannes W. M. Osterrieth and James Rampersad and David Madden and Nakul Rampal and Luka Skoric and Bethany Connolly and Mark D. Allendorf and Vitalie Stavila and Jonathan L. Snider and Rob Ameloot and Jo{\~{a}}o Marreiros and Conchi Ania and Diana Azevedo and Enrique Vilarrasa-Garcia and Bianca F. Santos and Xian-He Bu and Ze Chang and Hana Bunzen and Neil R. Champness and Sarah L. Griffin and Banglin Chen and Rui-Biao Lin and Benoit Coasne and Seth Cohen and Jessica C. Moreton and Yamil J. Col{\'{o}}n and Linjiang Chen and Rob Clowes and Fran{\c{c}}ois-Xavier Coudert and Yong Cui and Bang Hou and Deanna M. D{\textquotesingle}Alessandro and Patrick W. Doheny and Mircea Dinc{\u{a}} and Chenyue Sun and Christian Doonan and Michael Thomas Huxley and Jack D. Evans and Paolo Falcaro and Raffaele Ricco and Omar Farha and Karam B. Idrees and Timur Islamoglu and Pingyun Feng and Huajun Yang and Ross S. Forgan and Dominic Bara and Shuhei Furukawa and Eli Sanchez and Jorge Gascon and Selvedin Telalovi{\'{c}} and Sujit K. Ghosh and Soumya Mukherjee and Matthew R. Hill and Muhammed Munir Sadiq and Patricia Horcajada and Pablo Salcedo-Abraira and Katsumi Kaneko and Radovan Kukobat and Jeff Kenvin and Seda Keskin and Susumu Kitagawa and Ken-ichi Otake and Ryan P. Lively and Stephen J. A. DeWitt and Phillip Llewellyn and Bettina V. Lotsch and Sebastian T. Emmerling and Alexander M. Pütz and Carlos Mart{\'{\i}}-Gastaldo and Natalia M. Padial and Javier Garc{\'{\i}}a-Mart{\'{\i}}nez and Noemi Linares and Daniel Maspoch and Jose A. Su{\'{a}}rez del Pino and Peyman Moghadam and Rama Oktavian and Russel E. Morris and Paul S. Wheatley and Jorge Navarro and Camille Petit and David Danaci and Matthew J. Rosseinsky and Alexandros P. Katsoulidis and Martin Schröder and Xue Han and Sihai Yang and Christian Serre and Georges Mouchaham and David S. Sholl and Raghuram Thyagarajan and Daniel Siderius and Randall Q. Snurr and Rebecca B. Goncalves and Shane Telfer and Seok J. Lee and Valeska P. Ting and Jemma L. Rowlandson and Takashi Uemura and Tomoya Iiyuka and Monique A. van der Veen and Davide Rega and Veronique Van Speybroeck and Sven M. J. Rogge and Aran Lamaire and Krista S. Walton and Lukas W. Bingel and Stefan Wuttke and Jacopo Andreo and Omar Yaghi and Bing Zhang and Cafer T. Yavuz and Thien S. Nguyen and Felix Zamora and Carmen Montoro and Hongcai Zhou and Angelo Kirchon and David Fairen-Jimenez},
+	title = {How Reproducible are Surface Areas Calculated from the {BET} Equation?},
+	journal = {Advanced Materials}
+}
+@article{Ozin_1989,
+	doi = {10.1002/anie.198903591},
+	url = {https://doi.org/10.1002%2Fanie.198903591},
+	year = 1989,
+	month = {mar},
+	publisher = {Wiley},
+	volume = {28},
+	number = {3},
+	pages = {359--376},
+	author = {Geoffrey A. Ozin and Alex Kuperman and Andreas Stein},
+	title = {Advanced Zeolite, Materials Science},
+	journal = {Angew. Chem. Int. Ed. Engl.}
+}
+@article{Chen_2014_zeo,
+	doi = {10.1039/c4ta02984d},
+	url = {https://doi.org/10.1039%2Fc4ta02984d},
+	year = 2014,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {2},
+	number = {40},
+	pages = {16811--16831},
+	author = {Binling Chen and Zhuxian Yang and Yanqiu Zhu and Yongde Xia},
+	title = {Zeolitic imidazolate framework materials: recent progress in synthesis and applications},
+	journal = {J. Mater. Chem. A}
+}
+@article{Wang_2012,
+	doi = {10.1039/c1cs15150a},
+	url = {https://doi.org/10.1039%2Fc1cs15150a},
+	year = 2012,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {41},
+	number = {5},
+	pages = {1729--1741},
+	author = {Zhuopeng Wang and Jihong Yu and Ruren Xu},
+	title = {Needs and trends in rational synthesis of zeolitic materials},
+	journal = {Chem. Soc. Rev.}
+}
+@article{Ma_2000,
+  doi = {10.1016/s1387-1811(99)00199-7},
+  url = {https://doi.org/10.1016/s1387-1811(99)00199-7},
+  year = {2000},
+  month = may,
+  publisher = {Elsevier {BV}},
+  volume = {37},
+  number = {1-2},
+  pages = {243--252},
+  author = {Ying Ma and Wei Tong and Hua Zhou and Steven L Suib},
+  title = {A review of zeolite-like porous materials},
+  journal = {Microporous and Mesoporous Materials}
+}
+@article{Lu_2010,
+	doi = {10.1021/cm1021068},
+	url = {https://doi.org/10.1021%2Fcm1021068},
+	year = 2010,
+	month = {oct},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {22},
+	number = {21},
+	pages = {5964--5972},
+	author = {Weigang Lu and Daqiang Yuan and Dan Zhao and Christine Inge Schilling and Oliver Plietzsch and Thierry Muller and Stefan Bräse and Johannes Guenther and Janet Blümel and Rajamani Krishna and Zhen Li and Hong-Cai Zhou},
+	title = {Porous Polymer Networks: Synthesis, Porosity, and Applications in Gas Storage/Separation},
+	journal = {Chem. Mater.}
+}
+@article{Che_2020,
+	doi = {10.1016/j.chempr.2020.08.002},
+	url = {https://doi.org/10.1016%2Fj.chempr.2020.08.002},
+	year = 2020,
+	month = {oct},
+	publisher = {Elsevier {BV}},
+	volume = {6},
+	number = {10},
+	pages = {2558--2590},
+	author = {Sai Che and Lei Fang},
+	title = {Porous Ladder Polymer Networks},
+	journal = {Chem}
+}
+@article{Wang_2020,
+	doi = {10.1039/c9ta10190j},
+	url = {https://doi.org/10.1039%2Fc9ta10190j},
+	year = 2020,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {8},
+	number = {31},
+	pages = {15891--15899},
+	author = {Chenxu Wang and Chenxuan Li and Evan R. C. Rutledge and Sai Che and Jongbok Lee and Alexander J. Kalin and Caili Zhang and Hong-Cai Zhou and Zi-Hao Guo and Lei Fang},
+	title = {Aromatic porous polymer network membranes for organic solvent nanofiltration under extreme conditions},
+	journal = {J. Mater. Chem. A}
+}
+@article{Feng_2012,
+	doi = {10.1039/c2cs35157a},
+	url = {https://doi.org/10.1039%2Fc2cs35157a},
+	year = 2012,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {41},
+	number = {18},
+	pages = {6010},
+	author = {Xiao Feng and Xuesong Ding and Donglin Jiang},
+	title = {Covalent organic frameworks},
+	journal = {Chem. Soc. Rev.}
+}
+@article{Cote_2005,
+	doi = {10.1126/science.1120411},
+	url = {https://doi.org/10.1126%2Fscience.1120411},
+	year = 2005,
+	month = {nov},
+	publisher = {American Association for the Advancement of Science ({AAAS})},
+	volume = {310},
+	number = {5751},
+	pages = {1166--1170},
+	author = {Adrien P. Côté and Annabelle I. Benin and Nathan W. Ockwig and Michael O{\textquotesingle}Keeffe and Adam J. Matzger and Omar M. Yaghi},
+	title = {Porous, Crystalline, Covalent Organic Frameworks},
+	journal = {Science}
+}
+@article{Yaghi_1995,
+	doi = {10.1021/ja00146a033},
+	url = {https://doi.org/10.1021%2Fja00146a033},
+	year = 1995,
+	month = {oct},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {117},
+	number = {41},
+	pages = {10401--10402},
+	author = {O. M. Yaghi and Hailian Li},
+	title = {Hydrothermal Synthesis of a Metal-Organic Framework Containing Large Rectangular Channels},
+	journal = {J. Am. Chem. Soc.}
+}
+@article{Xu_2022,
+	doi = {10.3390/membranes12121205},
+	url = {https://doi.org/10.3390%2Fmembranes12121205},
+	year = 2022,
+	month = {nov},
+	publisher = {{MDPI} {AG}},
+	volume = {12},
+	number = {12},
+	pages = {1205},
+	author = {Xiao Xu and Yusak Hartanto and Jie Zheng and Patricia Luis},
+	title = {Recent Advances in Continuous {MOF} Membranes for Gas Separation and Pervaporation},
+	journal = {Membranes}
+}
+@article{Abrahams_1991,
+	doi = {10.1021/ja00009a065},
+	url = {https://doi.org/10.1021%2Fja00009a065},
+	year = 1991,
+	month = {apr},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {113},
+	number = {9},
+	pages = {3606--3607},
+	author = {Brendan F. Abrahams and Bernard F. Hoskins and Richard Robson},
+	title = {A new type of infinite 3D polymeric network containing 4-connected, peripherally-linked metalloporphyrin building blocks},
+	journal = {J. Am. Chem. Soc.}
+}
+@article{Li_1999,
+	doi = {10.1038/46248},
+	url = {https://doi.org/10.1038%2F46248},
+	year = 1999,
+	month = {nov},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {402},
+	number = {6759},
+	pages = {276--279},
+	author = {Hailian Li and Mohamed Eddaoudi and M. O{\textquotesingle}Keeffe and O. M. Yaghi},
+	title = {Design and synthesis of an exceptionally stable and highly porous metal-organic framework},
+	journal = {Nature}
+}
+@article{Furukawa_2013,
+	doi = {10.1126/science.1230444},
+	url = {https://doi.org/10.1126%2Fscience.1230444},
+	year = 2013,
+	month = {aug},
+	publisher = {American Association for the Advancement of Science ({AAAS})},
+	volume = {341},
+	number = {6149},
+	author = {Hiroyasu Furukawa and Kyle E. Cordova and Michael O'Keeffe and Omar M. Yaghi},
+	title = {The Chemistry and Applications of Metal-Organic Frameworks},
+	journal = {Science}
+}
+@article{Kuppler_2009,
+	doi = {10.1016/j.ccr.2009.05.019},
+	url = {https://doi.org/10.1016%2Fj.ccr.2009.05.019},
+	year = 2009,
+	month = {dec},
+	publisher = {Elsevier {BV}},
+	volume = {253},
+	number = {23-24},
+	pages = {3042--3066},
+	author = {Ryan J. Kuppler and Daren J. Timmons and Qian-Rong Fang and Jian-Rong Li and Trevor A. Makal and Mark D. Young and Daqiang Yuan and Dan Zhao and Wenjuan Zhuang and Hong-Cai Zhou},
+	title = {Potential applications of metal-organic frameworks},
+	journal = {Coordination Chemistry Reviews}
+}
+@article{Ejsmont_2021,
+	doi = {10.1016/j.ccr.2020.213655},
+	url = {https://doi.org/10.1016%2Fj.ccr.2020.213655},
+	year = 2021,
+	month = {mar},
+	publisher = {Elsevier {BV}},
+	volume = {430},
+	pages = {213655},
+	author = {Aleksander Ejsmont and Jacopo Andreo and Arianna Lanza and Aleksandra Galarda and Lauren Macreadie and Stefan Wuttke and Stefano Canossa and Evelyn Ploetz and Joanna Goscianska},
+	title = {Applications of reticular diversity in metal{\textendash}organic frameworks: An ever-evolving state of the art},
+	journal = {Coordination Chemistry Reviews}
+}
+@article{Kang_2023,
+	doi = {10.1038/s42256-023-00628-2},
+	url = {https://doi.org/10.1038%2Fs42256-023-00628-2},
+	year = 2023,
+	month = {mar},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {5},
+	number = {3},
+	pages = {309--318},
+	author = {Yeonghun Kang and Hyunsoo Park and Berend Smit and Jihan Kim},
+	title = {A multi-modal pre-training transformer for universal transfer learning in metal{\textendash}organic frameworks},
+	journal = {Nature Machine Intelligence}
+}
+@article{Cao_2023,
+	doi = {10.1021/jacs.2c11420},
+	url = {https://doi.org/10.1021%2Fjacs.2c11420},
+	year = 2023,
+	month = {jan},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {145},
+	number = {5},
+	pages = {2958--2967},
+	author = {Zhonglin Cao and Rishikesh Magar and Yuyang Wang and Amir Barati Farimani},
+	title = {{MOFormer}: Self-Supervised Transformer Model for Metal{\textendash}Organic Framework Property Prediction},
+	journal = {J. Am. Chem. Soc.}
+}
+@article{Li_2022,
+	doi = {10.1039/d2sc01254e},
+	url = {https://doi.org/10.1039%2Fd2sc01254e},
+	year = 2022,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {13},
+	number = {27},
+	pages = {7990--8002},
+	author = {Aurelia Li and Rocio Bueno-Perez and David Madden and David Fairen-Jimenez},
+	title = {From computational high-throughput screenings to the lab: taking metal{\textendash}organic frameworks out of the computer},
+	journal = {Chem. Sci.}
+}
+@article{Wang_2014,
+	doi = {10.1039/c3sc52348a},
+	url = {https://doi.org/10.1039%2Fc3sc52348a},
+	year = 2014,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {5},
+	number = {2},
+	pages = {620--624},
+	author = {Hao Wang and Kexin Yao and Zhijuan Zhang and Jacek Jagiello and Qihan Gong and Yu Han and Jing Li},
+	title = {The first example of commensurate adsorption of atomic gas in a {MOF} and effective separation of xenon from other noble gases},
+	journal = {Chem. Sci.}
+}
+@article{Tao_2020,
+	doi = {10.1021/acs.inorgchem.0c01766},
+	url = {https://doi.org/10.1021%2Facs.inorgchem.0c01766},
+	year = 2020,
+	month = {jul},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {59},
+	number = {16},
+	pages = {11793--11800},
+	author = {Yuan Tao and Yaling Fan and Zhenzhen Xu and Xuefeng Feng and Rajamani Krishna and Feng Luo},
+	title = {Boosting Selective Adsorption of Xe over Kr by Double-Accessible Open-Metal Site in Metal{\textendash}Organic Framework: Experimental and Theoretical Research},
+	journal = {Inorg. Chem.}
+}
+@article{Li_2019,
+	doi = {10.1021/jacs.9b03422},
+	url = {https://doi.org/10.1021%2Fjacs.9b03422},
+	year = 2019,
+	month = {may},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {141},
+	number = {23},
+	pages = {9358--9364},
+	author = {Liangying Li and Lidong Guo and Zhiguo Zhang and Qiwei Yang and Yiwen Yang and Zongbi Bao and Qilong Ren and Jing Li},
+	title = {A Robust Squarate-Based Metal{\textendash}Organic Framework Demonstrates Record-High Affinity and Selectivity for Xenon over Krypton},
+	journal = {J. Am. Chem. Soc.}
+}
+@article{Mohamed_2016,
+	doi = {10.1002/anie.201602287},
+	url = {https://doi.org/10.1002%2Fanie.201602287},
+	year = 2016,
+	month = {may},
+	publisher = {Wiley},
+	volume = {55},
+	number = {29},
+	pages = {8285--8289},
+	author = {Mona H. Mohamed and Sameh K. Elsaidi and Tony Pham and Katherine A. Forrest and Herbert T. Schaef and Adam Hogan and Lukasz Wojtas and Wenqian Xu and Brian Space and Michael J. Zaworotko and Praveen K. Thallapally},
+	title = {Hybrid Ultra-Microporous Materials for Selective Xenon Adsorption and Separation},
+	journal = {Angew. Chem. Int. Ed.}
+}
+@article{Chen_2014,
+	doi = {10.1038/nmat4035},
+	url = {https://doi.org/10.1038%2Fnmat4035},
+	year = 2014,
+	month = {jul},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {13},
+	number = {10},
+	pages = {954--960},
+	author = {Linjiang Chen and Paul S. Reiss and Samantha Y. Chong and Daniel Holden and Kim E. Jelfs and Tom Hasell and Marc A. Little and Adam Kewley and Michael E. Briggs and Andrew Stephenson and K. Mark Thomas and Jayne A. Armstrong and Jon Bell and Jose Busto and Raymond Noel and Jian Liu and Denis M. Strachan and Praveen K. Thallapally and Andrew I. Cooper},
+	title = {Separation of rare gases and chiral molecules by selective binding in porous organic cages},
+	journal = {Nature Mater}
+}
+@article{Banerjee_2014,
+	doi = {10.1021/ar5003126},
+	url = {https://doi.org/10.1021%2Far5003126},
+	year = 2014,
+	month = {dec},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {48},
+	number = {2},
+	pages = {211--219},
+	author = {Debasis Banerjee and Amy J. Cairns and Jian Liu and Radha K. Motkuri and Satish K. Nune and Carlos A. Fernandez and Rajamani Krishna and Denis M. Strachan and Praveen K. Thallapally},
+	title = {Potential of Metal{\textendash}Organic Frameworks for Separation of Xenon and Krypton},
+	journal = {Acc. Chem. Res.}
+}
+@article{Li_2009,
+	doi = {10.1039/b802426j},
+	url = {https://doi.org/10.1039%2Fb802426j},
+	year = 2009,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {38},
+	number = {5},
+	pages = {1477},
+	author = {Jian-Rong Li and Ryan J. Kuppler and Hong-Cai Zhou},
+	title = {Selective gas adsorption and separation in metal{\textendash}organic frameworks},
+	journal = {Chem. Soc. Rev.}
+}
+@article{Morris_2008,
+	doi = {10.1002/anie.200703934},
+	url = {https://doi.org/10.1002%2Fanie.200703934},
+	year = 2008,
+	month = {jun},
+	publisher = {Wiley},
+	volume = {47},
+	number = {27},
+	pages = {4966--4981},
+	author = {Russell{\hspace{0.25em}}E. Morris and Paul{\hspace{0.25em}}S. Wheatley},
+	title = {Gas Storage in Nanoporous Materials},
+	journal = {Angew. Chem. Int. Ed.}
+}
+@article{Bell_2003,
+	doi = {10.1126/science.1083671},
+	url = {https://doi.org/10.1126%2Fscience.1083671},
+	year = 2003,
+	month = {mar},
+	publisher = {American Association for the Advancement of Science ({AAAS})},
+	volume = {299},
+	number = {5613},
+	pages = {1688--1691},
+	author = {Alexis T. Bell},
+	title = {The Impact of Nanoscience on Heterogeneous Catalysis},
+	journal = {Science}
+}
+@article{Singh_2019,
+	doi = {10.1007/s12598-019-01205-6},
+	url = {https://doi.org/10.1007%2Fs12598-019-01205-6},
+	year = 2019,
+	month = {feb},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {39},
+	number = {7},
+	pages = {751--766},
+	author = {Bhupendra Kumar Singh and Sunwoo Lee and Kyungsu Na},
+	title = {An overview on metal-related catalysts: metal oxides, nanoporous metals and supported metal nanoparticles on metal organic frameworks and zeolites},
+	journal = {Rare Met.}
+}
+@article{Della_Rocca_2011,
+	doi = {10.1021/ar200028a},
+	url = {https://doi.org/10.1021%2Far200028a},
+	year = 2011,
+	month = {jun},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {44},
+	number = {10},
+	pages = {957--968},
+	author = {Joseph Della Rocca and Demin Liu and Wenbin Lin},
+	title = {Nanoscale Metal{\textendash}Organic Frameworks for Biomedical Imaging and Drug Delivery},
+	journal = {Acc. Chem. Res.}
+}
+@article{Bernini_2014,
+	doi = {10.1039/c3tb21328e},
+	url = {https://doi.org/10.1039%2Fc3tb21328e},
+	year = 2014,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {2},
+	number = {7},
+	pages = {766--774},
+	author = {Mar{\'{\i}}a C. Bernini and David Fairen-Jimenez and Marcelo Pasinetti and Antonio J. Ramirez-Pastor and Randall Q. Snurr},
+	title = {Screening of bio-compatible metal{\textendash}organic frameworks as potential drug carriers using Monte Carlo simulations},
+	journal = {J. Mater. Chem. B}
 }
